2012-10-22  James Hunt  <james.hunt@ubuntu.com>

	* init/parse_job.c: stanza_kill(): Actually save parsed
	  value to avoid crash if kill signal given as a numeric
	  (LP: #1049820).
	* init/tests/test_parse_job.c: test_stanza_kill(): New test:
	  "with signal and single numeric argument".

2012-08-31  Steve Langasek  <steve.langasek@ubuntu.com>

	[ A. Costa <agcosta@gis.net> ]
	* init/man/init.5, util/man/runlevel.7, util/man/initctl.8: fix a
	number of typos.

2012-08-07  James Hunt  <james.hunt@ubuntu.com>

	* init/main.c: main(): Remove checks for /dev/kmsg, /dev/null,
	  /dev/console and /dev/tty since some environments use different
	  major/minor numbers to the norm (for example on LXC, /dev/console is
	  not (5,1), but (136,*)). Do not attempt to create /dev/console again,
	  due to LXC numbering difference.

2012-08-03  James Hunt  <james.hunt@ubuntu.com>

	* init/main.c:main(): Handle hostile initramfs-less environments by
	  calling umask and creating required device nodes as early as possible.
	* init/system.c: New functions to simplify code:
	  - system_mknod()
	  - system_check_file()

2012-07-31  James Hunt  <james.hunt@ubuntu.com>

	[ Eric S. Raymond <esr@thyrsus.com> ]
	* extra/man/socket-event.7: Fixed incorrect troff (LP: #1018925).

2012-03-22  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Begin new release.
	* configure.ac: Bump version to 1.6.

2012-03-22  James Hunt  <james.hunt@ubuntu.com>

	* Changelog: Release entry.
	* configure.ac: Bump year.
	* NEWS: Release 1.5.

2012-03-16  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_job_process:
	  - Fixed multiple TEST_FAILED() typos
	    ("unexpected" => unexpectedly").
	* job_process_spawn(): Only display single message
	  if pty setup fails. 
	* init/man/init.5: Typo.
	* init/tests/test_job_process:
	  - child(): New TEST_OUTPUT_WITH_STOP test.
	  - test_run(): New test "with multiple processes and log".
	  - test_spawn():
	    - umask reset.