@@ -5,6 +5,13 @@
 	  (LP: #1049820).
 	* init/tests/test_parse_job.c: test_stanza_kill(): New test:
 	  "with signal and single numeric argument".
+	* init/Makefile.am: test_job_process must now be linked to the 'util'
+	  library for pty helper functionality.
+	* init/tests/test_job_process.c:
+	  - Compiler appeasement.
+	  - Conditionally run tests in a pty for build environments such as
+	    modern versions of sbuild(1) that do not provide a controlling
+	    terminal (sbuild) (LP: #888910).
 
 2012-08-31  Steve Langasek  <steve.langasek@ubuntu.com>
 
